--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.example</groupId>
     <artifactId>MadisonIsland_Automation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <xmlSuite>myFirstTestSuite.xml</xmlSuite>
+        <webDriverManagerVersion>5.3.1</webDriverManagerVersion>
+        <seleniumVersion>4.6.0</seleniumVersion>
+        <lombokVersion>1.18.24</lombokVersion>
+        <testNgVersion>7.6.1</testNgVersion>
+        <surefireVersion>3.0.0-M8</surefireVersion>
+        <extentVersion>5.0.9</extentVersion>
     </properties>
 
     <dependencies>
@@ -19,26 +22,26 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.6.0</version>
+            <version>${seleniumVersion}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.3.0</version>
+            <version>${webDriverManagerVersion}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.6.1</version>
+            <version>${testNgVersion}</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>${lombokVersion}</version>
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -47,9 +50,45 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.1</version>
         </dependency>
-
-
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>${extentVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
 
     </dependencies>
+
+    <build>
+       <plugins>
+          <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                 <configuration>
+                     <source>14</source>
+                     <target>14</target>
+                 </configuration>
+          </plugin>
+           <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-surefire-plugin</artifactId>
+                 <version>${surefireVersion}</version>
+                 <configuration>
+                 <suiteXmlFiles>
+                      <suiteXmlFile>myFirstTestSuite.xml</suiteXmlFile>
+                     <suiteXmlFile>Smoke.xml</suiteXmlFile>
+                 </suiteXmlFiles>
+                 </configuration>
+           </plugin>
+       </plugins>
+    </build>
+
+
 
 </project>
