--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,4 @@
 protocol=http
-hostname=demo-store.seleniumacademy
-domain=.com
+hostname=demo-store.seleniumacademy.com
 port=80
-browser=CHROME
+browser=EDGE
