created a Smoke suite

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 protocol=http
-hostname=demo-store.seleniumacademy.com
+hostname=www.demo-store.seleniumacademy.com
 port=80
 browser=EDGE
 headlessMode=false
