--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <xmlSuite>myFirstTestSuite.xml</xmlSuite>
         <webDriverManagerVersion>5.3.1</webDriverManagerVersion>
         <seleniumVersion>4.6.0</seleniumVersion>
         <lombokVersion>1.18.24</lombokVersion>
@@ -60,6 +59,11 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.15</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
         </dependency>
 
     </dependencies>
