created data provider for the positive fillInBillingInformation method that takes the data from an sql database

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,3 +4,9 @@ port=80
 browser=EDGE
 headlessMode=false
 startMaximized=true
+#............DB CONNECTION.............
+dbHostname=localhost
+dbPort=3306
+dbUser=root
+dbPassword=root
+dbSchema=automation
