--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,7 +2,7 @@ protocol=http
 hostname=www.demo-store.seleniumacademy.com
 port=80
 browser=EDGE
-headlessMode=false
+headlessMode=true
 startMaximized=true
 #............DB CONNECTION.............
 dbHostname=localhost
