--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
                  <suiteXmlFiles>
                       <suiteXmlFile>Register.xml</suiteXmlFile>
                       <suiteXmlFile>Login.xml</suiteXmlFile>
+                      <suiteXmlFile>Cart.xml</suiteXmlFile>
                       <suiteXmlFile>Smoke.xml</suiteXmlFile>
                       <suiteXmlFile>Regression.xml</suiteXmlFile>
                  </suiteXmlFiles>
