--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,13 @@
             <artifactId>extentreports</artifactId>
             <version>${extentVersion}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.15</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -78,7 +80,7 @@
           <plugin>
              <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                 <version>3.8.1</version>
                  <configuration>
                      <source>14</source>
                      <target>14</target>
@@ -92,6 +94,7 @@
                  <suiteXmlFiles>
                       <suiteXmlFile>Register.xml</suiteXmlFile>
                       <suiteXmlFile>Login.xml</suiteXmlFile>
+                      <suiteXmlFile>MyAccount.xml</suiteXmlFile>
                       <suiteXmlFile>Cart.xml</suiteXmlFile>
                       <suiteXmlFile>Checkout.xml</suiteXmlFile>
                       <suiteXmlFile>Smoke.xml</suiteXmlFile>
@@ -101,7 +104,4 @@
            </plugin>
        </plugins>
     </build>
-
-
-
 </project>
