--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,8 @@
                       <suiteXmlFile>Register.xml</suiteXmlFile>
                       <suiteXmlFile>Login.xml</suiteXmlFile>
                       <suiteXmlFile>MyAccount.xml</suiteXmlFile>
+                      <suiteXmlFile>Search.xml</suiteXmlFile>
+                      <suiteXmlFile>SearchResults.xml</suiteXmlFile>
                       <suiteXmlFile>Cart.xml</suiteXmlFile>
                       <suiteXmlFile>Checkout.xml</suiteXmlFile>
                       <suiteXmlFile>Smoke.xml</suiteXmlFile>
